--- a/Desafios/desafio_4/src/views/realTimeProducts.handlebars
+++ b/Desafios/desafio_4/src/views/realTimeProducts.handlebars
@@ -1,66 +1,56 @@
-<div class="container mt-5">
+<div class="container">
+    <h1 class="mt-5 mb-4 text-center">Productos en Tiempo Real</h1>
     <div class="row">
-        <div class="col-md-6">
-            <h1>Lista de productos</h1>
-            <div id="productList"></div>
-            {{#if products}}
-                <table class="table table-dark table-striped">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Title</th>
-                            <th>Description</th>
-                            <th>Price</th>
-                            <th>Thumbnail</th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {{#each products}}
-                            <tr>
-                                <td>{{id}}</td>
-                                <td>{{title}}</td>
-                                <td>{{description}}</td>
-                                <td>${{price}}</td>
-                                <td><img src="{{thumbnail}}" alt="{{title}} thumbnail" class="img-fluid" style="width: 50px;"></td>
-                                <td>
-                                    <a href="/products/{{id}}" class="btn btn-info">Delete</a>
-                                </td>
-                            </tr>
-                        {{/each}}
-                    </tbody>
-                </table>
-            {{else}}
-                <p>No hay productos disponibles! 😥</p>
-            {{/if}}
+        <div class="col-lg-7">
+            <table class="table table-dark table-striped">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nombre</th>
+                        <th>Descripción del producto</th>
+                        <th>Precio</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody id="productList">
+                    {{#each products}}
+                    <tr>
+                        <td>{{this.id}}</td>
+                        <td>{{this.title}}</td>
+                        <td>{{this.description}}</td>
+                        <td>{{this.price}}</td>
+                        <td><button onclick="confirmDelete('{{this.id}}')" class="btn btn-danger btn-sm">Eliminar</button></td>
+                    </tr>
+                    {{/each}}
+                </tbody>
+            </table>
         </div>
-        
-        <div class="col-md-6">
-            <h2>Agregar Nuevo Producto</h2>
-            <form id="productForm">
-                <div class="mb-3">
-                    <input type="text" name="title" class="form-control" placeholder="Título" required>
+
+        <div class="col-lg-5">
+            <div class="card">
+                <div class="card-body bg-dark">
+                    <h2 class="mb-4">
+                        <mark>
+                            Añadir Producto
+                        </mark>
+                    </h2>
+                    <form id="addProductForm">
+                        <div class="mb-3">
+                            <input type="text" id="title" class="form-control" placeholder="Nombre del Producto" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" id="description" class="form-control" placeholder="Descripción del producto" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="number" id="price" class="form-control" placeholder="Precio" required>
+                        </div>
+                        <div class="mb-3">
+                            <input type="text" id="thumbnail" class="form-control" placeholder="URL" required>
+                        </div>
+                        <button type="submit" class="btn btn-primary">Añadir</button>
+                    </form>
                 </div>
-                {{!-- <div class="mb-3">
-                    <input type="text" name="description" class="form-control" placeholder="Descripción" required>
-                </div>
-                <div class="mb-3">
-                    <input type="text" name="code" class="form-control" placeholder="Codigo" required>
-                </div>
-                <div class="mb-3">
-                    <input type="number" name="price" class="form-control" placeholder="Precio" required>
-                </div>
-                <div class="mb-3">
-                    <input type="number" name="stock" class="form-control" placeholder="Stock" required>
-                </div>
-                <div class="mb-3">
-                    <input type="text" name="category" class="form-control" placeholder="Categoria" required>
-                </div>
-                <div class="mb-3">
-                    <input type="text" name="thumbnail" class="form-control" placeholder="Thumbnail URL" required>
-                </div> --}}
-                <button type="submit" class="btn btn-primary">Agregar producto</button>
-            </form>
+            </div>
         </div>
     </div>
 </div>
@@ -69,19 +59,65 @@
 <script>
     const socket = io()
 
-    document.getElementById('productForm').addEventListener('submit', (event) => {
-        event.preventDefault()
-        const formData = new FormData(event.target)
-        const newProduct = {
-            title: formData.get('title'),
-            //description: formData.get('description'),
-            //code: formData.get('code'),
-            //price: formData.get('price'),
-            //stock: formData.get('stock'),
-            //category: formData.get('category'),
-            //thumbnail: formData.get('thumbnail')
-        }
-        socket.emit('addProduct', newProduct)
-        event.target.reset()
+    socket.on('updateProducts', function(products) {
+    const productList = document.getElementById('productList')
+    productList.innerHTML = ''
+    products.forEach(product => {
+        const row = document.createElement('tr')
+        row.innerHTML = `
+        <td>${product.id}</td>
+        <td>${product.title}</td>
+        <td>${product.description}</td>
+        <td>${product.price}</td>
+        <td><button onclick="confirmDelete('${product.id}')">❌</button></td>`
+        productList.appendChild(row)
+        })
+    })
+
+    document.getElementById('addProductForm').addEventListener('submit', function(e) {
+        e.preventDefault()
+        const title = document.getElementById('title').value
+        const description = document.getElementById('description').value
+        const price = document.getElementById('price').value
+        const thumbnail = document.getElementById('thumbnail').value
+        const productId = generateUniqueId()
+        socket.emit('addProduct', { 
+            id: productId, 
+            title: title, 
+            description: description, 
+            price: price, 
+            thumbnail: thumbnail
+            })
+        document.getElementById('title').value = ''
+        document.getElementById('description').value = ''
+        document.getElementById('price').value = ''
+        document.getElementById('thumbnail').value = ''
+    })
+
+    function generateUniqueId() {
+        return '_' + Math.random().toString(36).substr(2, 9)
+    }
+
+    function confirmDelete(id) {
+        Swal.fire({
+            title: '¿Estás seguro?',
+            text: 'Esta acción eliminará el producto de forma permanente.',
+            icon: 'warning',
+            showCancelButton: true,
+            confirmButtonText: 'Sí, eliminar',
+            cancelButtonText: 'Cancelar'
+        }).then((result) => {
+            if (result.isConfirmed) {
+                deleteProduct(id)
+            }
+        })
+    }
+
+    function deleteProduct(id) {
+        socket.emit('deleteProduct', id)
+    }
+
+    socket.on('productDeleted', function(productId) {
+        socket.emit('getProducts')
     })
 </script>
